--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 a{
   text-decoration: none;
@@ -15,6 +16,8 @@ nav{
   display:flex;
   align-items: center;
   justify-content: space-between;
+  background-color: black;
+  color:white;
 }
 nav div{
   width:100px;
@@ -27,4 +30,22 @@ justify-content: space-around;
 }
 .navbar ul li{
 list-style-type: none;
+transition: 2s;
+display:flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+.navbar ul li div{
+
+  position:relative;
+  left:0px;
+  top:2px;
+  width:20px;
+  height:2px;
+  background-color: white;
+  transition: 0.3s;
+}
+.navbar ul li:hover div{
+width:60px;
 }
