add tools options

--- a/src/App.css
+++ b/src/App.css
@@ -87,4 +87,5 @@ height:3px;
 
 #bg{
   background-color:rgb(109, 109, 109);
+  cursor:url("https://cdn-icons-png.flaticon.com/512/98/98755.png?w=360"),auto;
 }
