--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 /*Set up the styling */
 .App {
+ 
   text-align: center;
   margin:0;
   padding:0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   height:100vh;
-  
+  cursor:url('http://anuary.com/dev/hp/pad3/public/images/hand-cursor.png'),pointer;
 }
 a{
   text-decoration: none;
@@ -87,5 +88,5 @@ height:3px;
 
 #bg{
   background-color:rgb(109, 109, 109);
-  cursor:url("https://cdn-icons-png.flaticon.com/512/98/98755.png?w=360"),auto;
+
 }
