--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /*Set up the styling */
+
 .App {
- 
+  overflow: hidden;
   text-align: center;
   margin:0;
   padding:0;
@@ -16,6 +17,11 @@ a{
 /*Styling the navbar*/
 
 nav{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  z-index:1000;
   display:flex;
   align-items: center;
   justify-content: space-between;
@@ -88,8 +94,30 @@ height:3px;
 
 #bg{
   background-color:rgb(109, 109, 109);
-
+  position: absolute;
+  top:0px;
+  left:0px;
+  overflow: hidden;
+ 
 }
 #draw{
+  display:none;
+}
+.colorEl{
+  position:absolute;
+  top:100px;
+  left:20px;
+  z-index:10;
+}
+.tools{
+  position: absolute;
+  top:200px;
+  z-index:10;
+  right:20px;
+  display:flex;
+  width:200px;
+}
+
+#copy{
   display:none;
 }
