--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   height:100vh;
-  cursor:url('http://anuary.com/dev/hp/pad3/public/images/hand-cursor.png'),pointer;
+ 
 }
 a{
   text-decoration: none;
@@ -153,4 +153,16 @@ height:3px;
 
 .model{
   padding:20px;
+}
+
+.model-data{
+  position:absolute;
+  top:70px;
+  width:200px;
+  left:calc(50%-100px);
+  height:30px;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+  z-index:15;
 }
