--- a/src/App.css
+++ b/src/App.css
@@ -189,3 +189,12 @@ height:3px;
   font-size:20px;
  
 }
+
+.popup{
+position:absolute;
+top:-20px;
+height:30px;
+width:200px;
+background-color: rgba(255, 251, 0, 0.455);
+border-radius:10px;
+}
