--- a/src/App.css
+++ b/src/App.css
@@ -197,4 +197,14 @@ height:30px;
 width:200px;
 background-color: rgba(255, 251, 0, 0.455);
 border-radius:10px;
+animation:popupanimation;
+animation-duration: 1s;
+}
+@keyframes popupanimation {
+  0%{
+    top:-20px;
+  }
+  100%{
+    top:20px;
+  }
 }
