--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ a{
 nav{
   position:absolute;
   top:0;
-  left:0;
-  width:100%;
+ right:0;
+  width:250px;
   z-index:100;
   display:flex;
   align-items: center;
@@ -32,6 +32,9 @@ nav{
 }
 nav div{
   width:100px;
+}
+.navbar img{
+  width:30px;
 }
 .navbar ul{
   width:100%;
