--- a/src/App.css
+++ b/src/App.css
@@ -262,3 +262,16 @@ left:calc(50% - 125px);
 user-select: none;
 pointer-events: none;
 }
+/*style the profile page*/
+.profile-details{
+  height:100vh;
+  padding:20px;
+  background-image: linear-gradient(rgb(121, 121, 121),black);
+  margin-top:0px;
+}
+.profile-details img{
+border:2px solid black;
+border-radius:3px;
+width:80px;
+
+}
