--- a/src/App.css
+++ b/src/App.css
@@ -268,10 +268,11 @@ pointer-events: none;
   padding:20px;
   background-image: linear-gradient(rgb(121, 121, 121),black);
   margin-top:0px;
+  color:white;
 }
 .profile-details img{
-border:2px solid black;
-border-radius:3px;
-width:80px;
+border:5px solid black;
+border-radius:10px;
+width:110px;
 
 }
