--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ nav{
   position:absolute;
   top:0;
  right:0;
-  width:250px;
+  width:350px;
   z-index:100;
   display:flex;
   align-items: center;
@@ -64,6 +64,20 @@ flex-direction: column;
 .navbar ul li:hover div{
 width:60px;
 height:3px;
+}
+
+.navbar button{
+  border:none;
+  outline:none;
+  color:white;
+  font-family:Arial, Helvetica, sans-serif;
+  padding:10px;
+  background-color: rgb(199, 39, 39);
+  border-radius:10px;
+  cursor:pointer;
+}
+.navbar button:hover{
+  background-color: rgb(207, 52, 52);
 }
 .home{
   height:60%;
@@ -263,8 +277,10 @@ user-select: none;
 pointer-events: none;
 }
 /*style the profile page*/
-.profile-details{
-  height:100vh;
+
+
+.profile{
+  height:100%;
   padding:20px;
   background-image: linear-gradient(rgb(121, 121, 121),black);
   margin-top:0px;
@@ -275,4 +291,11 @@ border:5px solid black;
 border-radius:10px;
 width:110px;
 
+}
+.collections{
+  width:80%;
+  height:65%;
+  background-color: rgba(0, 0, 0, 0.95);
+  border-radius:40px;
+  margin:auto;
 }
