--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,9 @@ height:3px;
   background-color: rgb(207, 52, 52);
 }
 .home{
-  height:60%;
+  height:100%;
+
+  background-image: linear-gradient(rgb(121, 121, 121),black);
   display:flex;
   align-items:center;
   justify-content: center;
