--- a/src/App.css
+++ b/src/App.css
@@ -318,3 +318,11 @@ width:110px;
 .profile-name img{
   width:40px;
 }
+.profile-image-edit{
+  position:relative;
+  top:-5px;
+  right:50px;
+border:none !important;
+width:50px !important;
+
+}
