--- a/src/App.css
+++ b/src/App.css
@@ -51,20 +51,7 @@ align-items: center;
 justify-content: center;
 flex-direction: column;
 }
-.navbar ul li div{
-  position:relative;
-  left:0px;
-  top:2px;
-  width:20px;
-  height:2px;
-  background-color: white;
-  border-radius:1px;
-  transition: 0.3s;
-}
-.navbar ul li:hover div{
-width:60px;
-height:3px;
-}
+
 
 .navbar button{
   border:none;
@@ -328,4 +315,18 @@ width:50px !important;
 }
 input[type="file"] {
   display: none;
+}
+
+.profile-box{
+
+  display:flex;
+  align-items: center;
+  justify-content: center;
+flex-direction: column;
+}
+.profile-box img{
+  width:50px;
+  height:50px;
+  border:3px solid white;
+  border-radius:5px;
 }
