--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ nav{
   position:absolute;
   top:0;
  right:0;
-  width:350px;
+  width:400px;
   z-index:100;
   display:flex;
   align-items: center;
@@ -322,11 +322,17 @@ input[type="file"] {
   display:flex;
   align-items: center;
   justify-content: center;
-flex-direction: column;
+  gap:10px;
+
 }
 .profile-box img{
   width:50px;
   height:50px;
   border:3px solid white;
   border-radius:5px;
+}
+.profile-box img:hover{
+  border:3px solid rgb(255, 251, 0);
+  width:55px;
+  height:55px;
 }
